--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "ng serve",
-    "start:api": "ng serve api",
-    "start:app": "ng serve journal -o",
+    "start": "ng run api:serve-with-services",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
